--- a/README.html
+++ b/README.html
@@ -647,6 +647,16 @@ dendrograms (<code>dynamicTreeCut</code>)</li>
 <span id="cb1-4"><a href="#cb1-4" tabindex="-1"></a>  <span class="st">&quot;pheatmap&quot;</span>,</span>
 <span id="cb1-5"><a href="#cb1-5" tabindex="-1"></a>  <span class="st">&quot;dynamicTreeCut&quot;</span></span>
 <span id="cb1-6"><a href="#cb1-6" tabindex="-1"></a>))</span></code></pre></div>
+<h2 id="installation">Installation</h2>
+<h1 id="install-bioconductor-if-not-already-installed">Install
+Bioconductor (if not already installed)</h1>
+<p>if (!requireNamespace(“BiocManager”, quietly = TRUE))
+install.packages(“BiocManager”)</p>
+<h1 id="install-complexheatmap">Install ComplexHeatmap</h1>
+<p>BiocManager::install(“ComplexHeatmap”)</p>
+<h1 id="install-mirheat-from-github">Install miRHeat from GitHub</h1>
+<p>install.packages(“remotes”)
+remotes::install_github(“bianicoletti/miRHeat”)</p>
 <h2 id="hammer_and_wrench-how-to-use-the-pipeline">🛠️ <strong>How to Use
 the Pipeline</strong></h2>
 <h3 id="id_1-load-the-main-script">1. Load the main script</h3>
